@@ -73,6 +73,7 @@ public class UIButton extends UIControl implements ImageSourceOwner{
       this.navigate = btn.navigate;
       this.pressImage = btn.pressImage;
       this.uiCommand = btn.uiCommand;
+      this.uiCommandDTO = btn.uiCommandDTO;
    }
    /**
     * Instantiates a new uI button.
